// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render correctly 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with capitalize 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: capitalize;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={true}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={true}
    color="gray-5"
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with color 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gold"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gold"
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gold"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with italic 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: italic;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={true}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={true}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with opacity 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  opacity: 0.5;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={0.5}
  size="14px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={false}
    opacity={0.5}
    size="14px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={0.5}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with size 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 32px;
  text-transform: none;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="32px"
  uppercase={false}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={false}
    opacity={1}
    size="32px"
    uppercase={false}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="32px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with uppercase 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: uppercase;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={true}
  weight={300}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={false}
    opacity={1}
    size="14px"
    uppercase={true}
    weight={300}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render correctly with weight 1`] = `
.c0 {
  font-family: 'Montserrat',helvetica,sans serif;
  font-weight: 500;
  font-size: 14px;
  text-transform: none;
  font-style: normal;
  opacity: 1;
}

<Text
  capitalize={false}
  color="gray-5"
  italic={false}
  opacity={1}
  size="14px"
  uppercase={false}
  weight={500}
>
  <styled.span
    capitalize={false}
    color="gray-5"
    italic={false}
    opacity={1}
    size="14px"
    uppercase={false}
    weight={500}
  >
    <span
      className="c0"
      color="gray-5"
      opacity={1}
      size="14px"
    >
      MyText
    </span>
  </styled.span>
</Text>
`;
